# BattleShip

./: README.md
BattleShip/: CMakeLists.txt
BattleShip/GameFiles/: board.cpp  board.h  game.cpp  game.h  game_type.cpp  game_type.h  main.cpp  setup.cpp  setup.h  ship.cpp  ship.h
BattleShip/Players/: ai_player.cpp  ai_player.h  human.cpp  human.h  player.cpp  player.h
BattleShip/Players/AIPlayers/: cheater.cpp  cheater.h  random.cpp  random.h  search_destroy.cpp  search_destroy.h
